--- a/text.html
+++ b/text.html
@@ -20,7 +20,7 @@
   <div id="t"></div>
 
   <script>
-    const EXPORT_CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vRpG2Z5s4KvRw5iYM8AokvwxM6HEE5q1U2WWDOyOfyz3UBrAFnV80t7HVyK9iuA8SNxMS1bo0kj-e2Z/pub?gid=2053858318&single=true&output=csv";
+    const EXPORT_CSV_URL = "https://docs.google.com/spreadsheets/d/1I_w8pl76OuNL-0dYW9WT2ATRgMwt6Wcj2DYoRrtJL20/gviz/tq?tqx=out:csv&sheet=OBS_EXPORT";
 
     const params = new URLSearchParams(location.search);
     const slot = params.get("slot");      // "1".."8"
